--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version"
         <activity android:name=".home" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,5 +41,9 @@
             android:label="@string/title_activity_maps" >
         </activity>
     </application>
+    <!--
+        Location access set to fine for precise location accuracy!
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
 </manifest>
